update parcels
